<resources>
    <string name="app_name">DIVULGENewsApp</string>

    <!-- Bottom navigation menu-->
    <string name="breaking">Breaking</string>
    <string name="exclusive">Exclusive</string>
    <string name="saved">Saved</string>
    <string name="search">Search</string>

    <!-- Fragments title-->
    <string name="breaking_news">HeadLines</string>
    <string name="saved_news">Saved News</string>
    <string name="exclusive_news">Exclusive For You</string>

    <!-- Saved news fragment-->
    <string name="no_saved_news">No saved news</string>
    <string name="no_Exclusive_news">Get Premium to Sow more</string>

    <!-- Search news fragment-->
    <string name="search_dot">Search…</string>
    <string name="searched_news">Search News..</string>

    <!-- User Activity-->
    <string name="discover_your_daily_news_here">Get in touch with Daily News</string>
    <string name="explore_all_the_most_exiting_news_based_on_your_interest_and_country">Get more news based on your Interests</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="hello_again">Hello Again!</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back!</string>
    <string name="register_with_your_mobile_number">Register with your phone number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember_me">Remember me</string>
    <string name="hello">Hello!</string>
    <string name="register_for_daily_hot_news_on_figer_tips">Register for daily hot news on figer tips</string>
    <string name="email">Email</string>
    <string name="get_otp">Get OTP</string>
    <string name="change_phone_number">Change phone number</string>

    <!--    Profile and Settings Activity-->
    <string name="no_name">No Name</string>
    <string name="not_available">Not Available</string>
    <string name="time_read">Time read</string>
    <string name="articles_read">Articles read</string>
    <string name="user_info">User Info</string>
    <string name="full_name">Full Name</string>

    <!-- Error messages-->
    <string name="registration_failed_please_check_entered_phone_number">Registration failed, please check entered phone number</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
</resources>