<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/montserrat_medium"
                android:text="Profile"
                android:textColor="@color/app_navy_blue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnEditProfile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toStartOf="@+id/btnLogout"
                android:background="@drawable/bg_rounded_corner_ripple"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_edit_user"
                android:visibility="invisible"
                app:tint="@color/app_navy_blue" />

            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:background="@drawable/bg_rounded_corner_ripple"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_logout"
                android:tooltipText="@string/logout"
                app:tint="@android:color/holo_red_light" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_user" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvUserFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/no_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUserPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/not_available"
                android:textColor="@color/text_grey"
                android:textSize="14sp" />
            <!--         <View -->
            <!--             android:layout_width="match_parent" -->
            <!--             android:layout_height="1dp" -->
            <!--             android:layout_margin="16dp" -->
            <!--             android:background="@color/grey" /> -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26sp"
                android:layout_marginBottom="16dp"
                android:baselineAligned="false"
                android:visibility="gone"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="2 Hrs"
                        android:textColor="@color/app_navy_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_read"
                        android:textColor="@color/text_grey"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="11"
                        android:textColor="@color/app_navy_blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/articles_read"
                        android:textColor="@color/text_grey"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bg_rounded_corner"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/user_info"
                    android:textColor="@color/app_navy_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_rounded_corner"
                    android:backgroundTint="@color/white"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName|textCapWords"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_rounded_corner"
                    android:backgroundTint="@color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerCountries"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_rounded_corner"
                    android:backgroundTint="@color/white"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp" />

                <Button
                    android:id="@+id/btnSaveProfileInfo"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="16dp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/bg_rounded_corner_ripple"
                    android:letterSpacing="0"
                    android:text="Save changes"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/app_red" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>