<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="5">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_margin="50dp"
                android:src="@drawable/phone" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/register_with_your_mobile_number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/explore_all_the_most_exiting_news_based_on_your_interest_and_country"
                android:textAlignment="center"
                android:textColor="@color/text_grey"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="7">


                <EditText
                    android:id="@+id/etCountryCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_rounded_corner"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="+00"
                    android:inputType="phone"
                    android:maxLength="4"
                    android:paddingLeft="22dp"
                    android:paddingRight="22dp"
                    android:text="+91"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="5"
                    android:background="@drawable/bg_rounded_corner"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="mobile number"
                    android:inputType="number"
                    android:maxLength="12"
                    android:paddingLeft="22dp"
                    android:paddingRight="22dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="invisible"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/btnGetOtp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_rounded_corner"
                    android:fontFamily="@font/montserrat_medium"
                    android:letterSpacing="0"
                    android:text="@string/get_otp"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/app_red" />



            </RelativeLayout>



        </LinearLayout>

    </LinearLayout>
</ScrollView>